# dirac-agentic

./: .gitignore  .pre-commit-config.yaml  README.md  pixi.toml  pyproject.toml
.agents/skills/debug-job/: SKILL.md
.agents/skills/search-jobs/: SKILL.md
.agents/skills/submit-job/: SKILL.md
.github/workflows/: lock.yaml  mcp.yaml  pre-commit.yaml  unit-tests.yaml
data/: pdfs.json  qa_pairs.json  repos.json
data/text/: 0306060.txt  1-s2.0-S0167739X22000772-main.txt  1902.txt  2303.txt  Catalog.txt  ClientServer.txt  HTTPSServices.txt  InstallingDiracServer.txt  JobsPriorities.txt  Pilots3.txt  README.txt  Serialization.txt  Storage.txt  advanced_configuration.txt  advanced_usage.txt  architecture.txt  authentication.txt  bodyplugin.txt  centralizedLogging.txt  commands.txt  componentsAuthNandAuthZ.txt  computingelements.txt  configurationbasics.txt  contribute.txt  country.txt  dedicateddfc.txt  diraccomponents.txt  document.txt  editingCode.txt  environment_variable_configuration.txt  epjconf_chep2018_03012.txt  epjconf_chep2018_03052.txt  epjconf_chep2018_04031.txt  epjconf_chep2020_03007.txt  epjconf_chep2020_03035.txt  epjconf_chep2020_04007.txt  epjconf_chep2020_09002.txt  epjconf_chep2024_04018.txt  epjconf_chep2024_04024.txt  epjconf_chep2024_04030.txt  (+28 more)
deploy/cern-ml/: README.md  agent-14b.yaml  orchestrator.yaml
dirac-agents/: pyproject.toml
dirac-agents/src/dirac_agents/: example.py  multiagent_example.py
dirac-dataset/: pyproject.toml
dirac-dataset/src/dirac_dataset/: __main__.py  cli.py  converter.py  data.py  downloader.py  generator.py  loader.py  milvus.py
dirac-dataset/src/dirac_dataset/.claude/agents/: code-reviewer.md
dirac-dataset/src/dirac_dataset/business_logic/: db_loader.py  embedding_factory.py  gen_dataset.py  search.py
dirac-dataset/src/dirac_dataset/data_access/: chroma.py  database_factory.py  embedding_factory.py  huggingface.py  milvus.py
dirac-dataset/src/dirac_dataset/presentation/: db_loader.py  gen_dataset.py  model_info.py
dirac-dataset/test/: test_db_loader.py  test_gen_dataset.py
dirac-mcp/: Dockerfile  README.md  pyproject.toml
dirac-mcp/src/dirac_mcp/: __main__.py  app.py  diracx.py  server.py  weather.py
dirac-mcp/src/dirac_mcp/prompts/: jobs.py
dirac-mcp/src/dirac_mcp/resources/: jobs.py
dirac-mcp/src/dirac_mcp/tools/: jobs.py
dirac-mcp/test/: test_server.py  test_tools.py
dirac-model/: pyproject.toml
dirac-model/src/dirac_model/: downloader.py  generate_text_dataset.py
docs/adr/: 001-dirac-qa-dataset-generator.md  002-dirac-mcp.md
eval/: README.md  baselines.json  pyproject.toml
eval/scenarios/: debug_job_failed.yaml  debug_job_not_found.yaml  debug_job_reschedule.yaml  debug_job_stalled.yaml  search_jobs_api_error.yaml  search_jobs_basic.yaml  search_jobs_multi_filter.yaml  search_jobs_status_summary.yaml  submit_job_simple.yaml  submit_job_with_sandbox.yaml
eval/src/dirac_eval/: __init__.py  langfuse_utils.py  mock_client.py  scenario.py  tool_registry.py
eval/test/: conftest.py  test_agent_eval.py  test_tool_execution.py
examples/agentic/: README.md  langgraph_workflow.py  multiagent_example.py  requirements.txt  simple_agent.py  smolagents_example.py
examples/finetuning/: README.md  converter.py  generate_qa_dataset.py  log.py  requirements.txt
examples/multi-agent/: README.md  debug_production.py  requirements.txt
examples/multi-mcp/: README.md  compose_servers.py  requirements.txt
examples/rag/: README.md  rag_chatbot.py  requirements.txt
examples/single-agent/: README.md  diracx_agent.py
src/dirac_agentic/: log.py
src/dirac_agentic/cli/: generate_qa_dataset.py  generate_text_dataset.py
src/dirac_agentic/mcp/: weather.py
src/dirac_agentic/rag_prep/: converter.py  downloader.py
src/dirac_agentic/smolagents/: client.py  example.py
