[project]
name = "dirac-agentic"
version = "0.1.0"
description = "Tools to build the dirac AI agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dirac-dataset",
  "dirac-model",
  "dirac-agents",
  "dirac-mcp",
]

[project.optional-dependencies]
dev = [
  "black",
  "ipykernel",
  "mypy",
  "pre-commit",
  "pytest",
  "ruff",
  "types-requests",
]

[project.scripts]
gen-txt-data = "dirac_agentic.cli.generate_text_dataset:app"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
