[project]
name = "dirac-agentic"
version = "0.1.0"
description = "Tools to build the dirac AI agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dirac-dataset",
  "dirac-mcp",
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "mypy",
  "pre-commit",
  "pytest",
  "ruff",
  "types-requests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # Line length enforced by ruff-format for code; allow long strings/comments

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
