[project]
name = "dirac-dataset"
version = "0.1.0"
description = "RAG tools for Dirac Agentic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets",
  "GitPython",
  "llama-index",
  "langchain",
  "langchain-community",
  "pydantic",
  "pymilvus",
  "pypdf",
  "requests",
  "rich",
  "typer",
]
