[project]
name = "dirac-dataset"
version = "0.1.0"
description = "HuggingFace dataset generation tools for Dirac Agentic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets",
  "huggingface_hub",
  "llama-index",
  "llama-index-readers-file",
  "llama-index-readers-github",
  "numpy",
  "pydantic",
  "pypdf",
  "requests",
  "rich",
  "typer",
  "types-requests",
]

[project.optional-dependencies]
test = ["pytest", "pytest-mock"]
